--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@
         <div class="col-lg-6">
           <div class="our-team-right-img-up position-relative">
             <img src="assets/img/our-team-element.png" class="img-fluid our-team-element" alt="">
-            <img src="assets/img/our-team-ball.png" class="img-fluid" alt="">
+            <img src="assets/img/our-team-ball.png" class="img-fluid mobile-our-team-ball" alt="">
             <div class="our-team-right-img-down ">
               <img src="assets/img/our-team.png" class="img-fluid mx-auto" alt="" srcset="">
             </div>
