--- a/contacts.html
+++ b/contacts.html
@@ -189,7 +189,7 @@
 
           </div>
           <div
-            class="col-lg-5 d-flex flex-column justify-content-center align-items-center contact-input-shado  shadow mt-5 contact-form-position ">
+            class="col-lg-6 d-flex flex-column justify-content-center align-items-center contact-input-shado  shadow mt-5 contact-form-position contact-form-width ">
             <h5 class="contact-form-title ">Fill the Form Below</h5>
             <div class="contact-input-group-1 d-flex justify-content-betwee">
               <div class="contact-input-name d-flex flex-column">
