--- a/faq.html
+++ b/faq.html
@@ -191,7 +191,7 @@
                       Tellus orci ac auctor augue mauris augue neque.</p>
                   </div>
                   <div class="faq-contact pt-3">
-                    <ul class="list-unstyled d-flex ">
+                    <ul class="list-unstyled d-flex faq-contact ">
                       <li>
                         <div class="d-flex align-items-center pb-3">
                           <img src="assets/img/icons/faq-mail.png" class="img-fluid  me-1" alt="">
@@ -202,8 +202,8 @@
                         </div>
                       </li>
                       <li>
-                        <div class="d-flex align-items-center ps-5">
-                          <img src="assets/img/icons/faq-phone.png" class="img-fluid " alt="">
+                        <div class="d-flex align-items-center ps-lg-5 ">
+                          <img src="assets/img/icons/faq-phone.png" class="img-fluid me-1 " alt="">
                           <div class="footer-links ps-3">
                             <h5 class="faq-content-icon-title">Phone Number</h5>
                             <h5 class="footer-soci-text">+1-206-156 2849/h5>
@@ -321,10 +321,10 @@
           <p class="text-white pt-3">Viverra justo nec ultrices dui sapien eget mi. Nisl pretium fusce id velit ut tortor pretium. <br>
             Sit amet aliquam id diam maecenas ultricies.</p>
           <div class="faq-help-btn d-lg-flex justify-content-center">
-            <div class="our-team-btn  col-lg-6 me-4">
+            <div class="our-team-btn  col-lg-6 me-4 faq-btn-mobile">
               <div class="d-flex align-items-center justify-content-center btn">
                 <h5 class="donate-text pt-3 ">Donate Now</h5>
-                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2" width="16px" height="10px"
+                <img src="assets/img/icons/menu-heart.png" class="img-fluid ms-2 mt-2 " width="16px" height="10px"
                   alt="">
               </div>
             </div>
