single cause last section

--- a/single-cause.html
+++ b/single-cause.html
@@ -164,75 +164,175 @@
   <div class="single-cause-donate-now ">
     <div class="single-cau-container shadow p-5">
       <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h3 class="single-cause-donate-text">Donate Now</h3>
-        </div>
-        <div class="donate-bar">
-          <div class="col-lg-10">
-            <div class="wrapper2">
-              <div class="progress-bar">
-                <div class="single-bar" data-size="35">
-                  <span class="perc"></span>
+        <div class="row">
+          <div class="col-lg-12">
+            <h3 class="single-cause-donate-text">Donate Now</h3>
+          </div>
+          <div class="donate-bar">
+            <div class="col-lg-10">
+              <div class="wrapper2">
+                <div class="progress-bar">
+                  <div class="single-bar" data-size="35">
+                    <span class="perc"></span>
+                  </div>
                 </div>
               </div>
             </div>
+            <div class="col-lg-2 d-flex justify-content-center align-content-center align-items-center pt-3">
+              <p> <span class="single-cau-bar-right-text-1">$1482,150</span> of <span
+                  class="single-cau-bar-right-text-2">$20,000</span> raised</p>
+            </div>
           </div>
-          <div class="col-lg-2 d-flex justify-content-center align-content-center align-items-center pt-3">
-            <p> <span class="single-cau-bar-right-text-1">$1482,150</span>  of <span class="single-cau-bar-right-text-2">$20,000</span> raised</p>
+          <div class="col-lg-12 single-cause-tabs d-flex  justify-content-between align-items-center">
+            <div class="single-cau-tab  d-flex  align-items-center">
+              <ul class="nav nav-pills">
+                <li class="nav-item ">
+                  <a class="nav-link active me-2" aria-current="page" href="#">$10</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link border me-2" href="#">$25</a>
+                </li>
+                <li class="nav-item  ">
+                  <a class="nav-link border me-2" href="#">$50</a>
+                </li>
+                <li class="nav-item  ">
+                  <a class="nav-link border me-2" href="#">$100</a>
+                </li>
+                <li class="nav-item  ">
+                  <a class="nav-link border me-2" href="#">$200</a>
+                </li>
+                <li class="nav-item  ">
+                  <a class="nav-link border me-2" href="#">$250</a>
+                </li>
+              </ul>
+            </div>
+            <div class="single-cau-input">
+              <input type="text" name="" placeholder="Insert Custom Value" id="" class="cau-input p-2s">
+            </div>
           </div>
         </div>
-        <div class="col-lg-12 single-cause-tabs d-flex  justify-content-between align-items-center">
-          <div class="single-cau-tab  d-flex  align-items-center">
-            <ul class="nav nav-pills">
-              <li class="nav-item ">
-                <a class="nav-link active me-2" aria-current="page" href="#" >$10</a>
-              </li>
-              <li class="nav-item ">
-                <a class="nav-link border me-2" href="#">$25</a>
-              </li>
-              <li class="nav-item  ">
-                <a class="nav-link border me-2" href="#">$50</a>
-              </li>
-              <li class="nav-item  ">
-                <a class="nav-link border me-2" href="#">$100</a>
-              </li>
-              <li class="nav-item  ">
-                <a class="nav-link border me-2" href="#">$200</a>
-              </li>
-              <li class="nav-item  ">
-                <a class="nav-link border me-2" href="#">$250</a>
-              </li>
-            </ul>
+        <div class="col-lg-12">
+          <h3 class="single-cause-donate-text pt-5">Personal İnformation</h3>
+        </div>
+        <div class="col-lg-12">
+          <div class="personal-cau-inputs d-flex  align-items-center">
+            <div class="personal-info-cau-1">
+              <p class="personal-cau-text">First Name</p>
+              <input type="text" name="" id="" placeholder="First Name" class="p-2 personal-cau-border">
+            </div>
+            <div class="personal-info-cau-2 ps-5">
+              <p class="personal-cau-text">Last Name</p>
+              <input type="text" name="" id="" placeholder="Last Name" class="p-2 personal-cau-border">
+            </div>
           </div>
-          <div class="single-cau-input">
-            <input  type="text" name="" placeholder="Insert Custom Value" id="" class="cau-input p-2s">
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-12">
-        <h3 class="single-cause-donate-text pt-5">Personal İnformation</h3>
-      </div>
-      <div class="col-lg-12">
-        <div class="personal-cau-inputs d-flex  align-items-center">
-        <div class="personal-info-cau-1">
-          <p class="personal-cau-text">First Name</p>
-          <input type="text"  name="" id="" placeholder="First Name" class="p-2 personal-cau-border">
-        </div>
-        <div class="personal-info-cau-2 ps-5">
-          <p class="personal-cau-text">Last Name</p>
-          <input type="text"  name="" id="" placeholder="Last Name" class="p-2 personal-cau-border">
-        </div>
-        </div>
-    
+
           <div class="personal-info-cau-2 pt-3">
             <p class="personal-cau-text">E Mail</p>
-            <input type="text"  name="" id="" placeholder="Your Mail" class=" p-2 w-100 personal-cau-border">
+            <input type="text" name="" id="" placeholder="Your Mail" class=" p-2 w-100 personal-cau-border">
           </div>
-          </div>
+        </div>
       </div>
     </div>
   </div>
+
+
+  <section class="single-cause-challenge">
+    <div class="single-cau-container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h3 class="single-chal-title">Challenge</h3>
+          <p class="single-chal-text">Tellus cras adipiscing enim eu turpis egestas pretium aenean. Gravida quis blandit
+            turpis cursus in hac habitasse. <br>
+            Aliquet bibendum enim facilisis gravida neque convallis a cras. Tristique senectus et netus et malesuada
+            fames. <br>
+            Velit scelerisque in dictum non consectetur a erat nam at. Scelerisque viverra mauris in aliquam sem
+            fringilla. <br>
+            Hendrerit dolor magna eget est.</p>
+        </div>
+
+        <div class="col-lg-6">
+          <img src="assets/img/cha-pic.png" alt="">
+        </div>
+        <div class="col-lg-6">
+          <img src="assets/img/cha-pic.png" alt="">
+        </div>
+        <div class="team-bread-line mt-5 ms-3"></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="single-cause-our-works">
+    <div class="single-cau-container">
+      <div class="row">
+        <div class="col-lg-12">
+          <h3>Our Work</h3>
+          <p>Consectetur a erat nam at lectus urna duis. Potenti nullam ac tortor vitae purus faucibus ornare
+            suspendisse sed. <br>
+            Interdum posuere lorem ipsum dolor sit. Sit amet volutpat consequat mauris. Dui accumsan sit amet nulla
+            facilisi <br>
+            morbi. Turpis in eu mi bibendum neque egestas congue. Iaculis nunc sed augue</p>
+        </div>
+        <div class="col lg-6">
+          <div class="faq-green-tick pt-3">
+            <ul class="list-unstyled">
+              <li class="">
+                <img src="assets/img/icons/yesil-tik.png" class="img-fluid" alt="">
+                <span class="faq-list-green">We will help you with the choice of fund</span>
+              </li>
+              <li class="">
+                <img src="assets/img/icons/yesil-tik.png" class="img-fluid" alt="">
+                <span class="faq-list-green">Donor satisfaction is guaranteed</span>
+              </li>
+              <li>
+                <img src="assets/img/icons/yesil-tik.png" class="img-fluid" alt="">
+                <span class="faq-list-green">We help companies give well</span>
+              </li>
+              <li>
+                <img src="assets/img/icons/yesil-tik.png" class="img-fluid" alt="">
+                <span class="faq-list-green">We help companies give well</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <ol class=" pt-3">
+            <li class=" pb-1">
+              Vestibulum rhoncus est pellentesque elit <br>
+              ullamcorper dignissim cras tincidunt lobortis.
+            </li>
+            <li class=" pb-1">
+              Donor satisfaction is guaranteed
+            </li>
+            <li>We help companies give well
+            </li>
+
+          </ol>
+        </div>
+        <div class="col-lg-12">
+          <img src="assets/img/single-cau-video.png" class="img-fluid pt-5" alt="">
+        </div>
+      </div>
+      <div class="single-cau-video-down d-flex px-2 border mt-5 p-3 ">
+        <div class="col-lg-6 d-flex align-content-center">
+          <div class="single-cau-arrow d-flex align-items-center">
+          <img src="assets/img/icons/single-cau-left-arrow.png" class="me-5" alt="">
+          </div>
+          <span class="single-cau-video-down-text">Providing Access to Safe Water,
+            Sanitation, and Hygiene</span>
+        </div>
+        <hr>
+        <div class="col-lg-6 d-flex">
+          <span class="single-cau-video-down-text">Play Area for Cats to Keep Them
+            Always Active</span>
+            <div class="single-cau-arrow pt-2">
+          <img src="assets/img/icons/single-cau-right-arrow.png" class="img-fluid" alt="">
+            </div>
+
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 
   <footer>
     <div class="container">
